--- a/webjsp2023-1/src/main/resources/application.properties
+++ b/webjsp2023-1/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Spring Framework and application log
-logging.level.org.springframework=info
+logging.level.org.springframework=debug
 
 
 # Hibernate logs for displaying executed SQL, input and output
@@ -18,4 +18,7 @@ spring.datasource.password=full2work
 #Hibernate configuration
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.mvc.view.prefix: /WEB-INF/views/
+spring.mvc.view.suffix: .jsp
 
